[package]
name = "unicodes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "super_secret"
path = "src/super_secret.rs"

[[bin]]
name = "scratch"
path = "src/scratch.rs"

[[bin]]
name = "file_read"
path = "src/file_read.rs"

[[bin]]
name = "file_write"
path = "src/file_write.rs"

[[bin]]
name = "bstr"
path = "src/bstr.rs"

[dependencies]
bstr = '1.6.0'
